hify-client/src/assets/main.css
html {
    height: 100%;
    font-size: 12px;
}

body {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    color: rgb(230, 230, 230);
    overflow: hidden;

    /* HACK: Elements disappear when scrolling on WebKit, this fixes it */
    perspective: 1px;

    /* These properties are required as simply using "bottom: 0" causes problems with the hack above */
    min-height: 100%;
    margin: 0;
    padding: 8px;
}

